--- a/dom/index2.html
+++ b/dom/index2.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <div id="carre"></div>
-    <div class="button">
-        <button type="button" id="button1">Yellow</button>
-        <button type="button" id="button2">Blue</button>
-        <button type="button" id="button3">300px</button>
-        <button type="button" id="button4">Go Away</button>
-        <button type="button" id="button5">Restart</button>
-    </div>
+    
+    <footer>
+        <div class="button">
+            <button type="button" id="button1">Yellow</button>
+            <button type="button" id="button2">Blue</button>
+            <button type="button" id="button3">300px</button>
+            <button type="button" id="button4">Go Away</button>
+            <button type="button" id="button5">Restart</button>
+            <button type="button" id="button6">Grow Up</button>
+        </div>
+    </footer>
     
     <script src="script2.js"></script>
 </body>
