This isn't finish :s

--- a/shifumi/index.html
+++ b/shifumi/index.html
@@ -13,9 +13,15 @@
     <h1>SHI-FU-MI</h1>
     <!-- Faire les 3 boutons -->
     <div id="buttons">
-        <button type="button" class="button"><img src="./img/if-39-harry-potter-colour-philosophers-stone-2730349_88175.svg" id="stone"></button>
-        <button type="button" class="button"><img src="./img/receipt-paper_icon-icons.com_56152.svg" id="paper"></button>
-        <button type="button" class="button"><img src="./img/Cut-80_icon-icons.com_57343.svg" id="scissors"></button>
+        <button type="button" id="stone">
+            <img src="./img/if-39-harry-potter-colour-philosophers-stone-2730349_88175.svg">
+        </button>
+        <button type="button" id="paper">
+            <img src="./img/receipt-paper_icon-icons.com_56152.svg">
+        </button>
+        <button type="button" id="scissors">
+            <img src="./img/Cut-80_icon-icons.com_57343.svg">
+        </button>
     </div>
     <!-- Mettre la phrase "Choose" -->
     <div id="choix">
