--- a/shifumi/index.html
+++ b/shifumi/index.html
@@ -43,7 +43,7 @@
     <!-- Le cadre du "Résultat" -->
     <div id="resultats"></div>
     <!-- Bouton "New Game" -->
-    <button type="button" id="button2">New Game</button>
+    <button type="button" id="button2" onclick="document.location.reload(false)">New Game</button>
     
     <script src="script.js"></script>
 </body>
